k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bluenest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bluenest
  template:
    metadata:
      labels:
        app: bluenest
    spec:
      containers:
      - name: bluenest
        image: sriharshaalla/bluenest:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bluenest
spec:
  selector:
    app: bluenest
  ports:
  - port: 80
    targetPort: 80
