k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluenest
  namespace: bluenest-website
spec:
  ingressClassName: nginx
  rules:
  - host: bluenest.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bluenest
            port:
              number: 80
